# College

./: README.md
College/Google Drive/: README.md
College/Year-1/CSU11010-Introduction-to-Programming-Semester-1/: LICENSE  README.md
College/Year-1/CSU11010-Introduction-to-Programming-Semester-2/: README.md
College/Year-1/CSU11013--Programming-Project-Group-Project/: README.md
College/Year-1/CSU11013-Programming-Project/: README.md
College/Year-1/CSU11021-Introduction-to-Computing-I/: README.md
College/Year-1/CSU11022-Introduction-to-Computing-II/: README.md
College/Year-1/CSU11026-Digital-Logic-Design-Semester-1/: README.md
College/Year-1/CSU11026-Digital-Logic-Design-Semester-2/: README.md
College/Year-1/CSU11031-Electronics-and-Information-Technology/: README.md
College/Year-1/STU11002-Statistical-Analysis-I/: README.md
College/Year-1/Year-1-JF/: README.md
College/Year-3/CSU33071 – Compiler Design I/: comments ex2.txt  even ex1.txt  plates ex3.txt
College/Year-3/CSU34011 – Symbolic Programming/: a1.pl  a2.pl
College/Year-3/CSU34016 – Introduction to Functional Programming/: Ex1.hs  Ex2.hs  Ex3.hs  Ex4.hs  Main-Ex4.hs
College/Year-3/CSU34021 – Computer Architecture II/: t1-task1.asm  t1-task2.asm  t2-task1.asm  t2-task2.c
College/Year-3/CSU34041 – Information Management II/: CA Task 1.txt  CA Task 5.txt
College/Year-4/CSU44000 – Internet Applications/: index.html  server.js  (+3 more)
College/Year-4/CSU44052 – Computer Graphics/CSU44052-Final-Project-main/: CMakeLists.txt  README.md
College/Year-4/CSU44052 – Computer Graphics/CSU44052-Final-Project-main/finalProject/: character.cpp  character.h  main.cpp
College/Year-4/CSU44052 – Computer Graphics/CSU44052-Final-Project-main/finalProject/shader/: bot.frag  bot.vert  circle_light.frag  circle_light.vert  emerald.frag  emerald.vert  main.frag  main.vert  object_texture.frag  object_texture.vert  particle.frag  particle.vert  point_shadow.frag  point_shadow.vert  skybox.vert
College/Year-4/CSU44052 – Computer Graphics/lab1/: CMakeLists.txt  lab1_cube.cpp
College/Year-4/CSU44052 – Computer Graphics/lab1/lab1/: lab1_triangle.frag  lab1_triangle.vert
College/Year-4/CSU44052 – Computer Graphics/lab3/: CMakeLists.txt
College/Year-4/CSU44052 – Computer Graphics/lab3/lab3/: box.frag  box.vert  depth.frag  depth.vert
(+425 files in other folders)
